[package]
name = "rdl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11.20", features = ["blocking"] }
manic = {version = "0.8.1", features = ["threaded"] }
url = "2.4.1"
rayon = "1.7.0"
num_cpus = "1.16.0"
memory-stats = "1.0.0"

[lib]
name = "core"
path = "src/lib.rs"

